Fixed whitespace issue

--- a/portfolio/src/app.scss
+++ b/portfolio/src/app.scss
@@ -7,4 +7,5 @@
 .component {
     margin:0;
     padding:0;
+    display: flex;
 }
