--- a/portfolio/src/components/nav/nav.scss
+++ b/portfolio/src/components/nav/nav.scss
@@ -5,6 +5,7 @@ $navItemHoverColour: #4DB33D;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 .nav-top {
